--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.elasticsearch</groupId>
 	<artifactId>plugin-storedProcedure</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>storedprocedure</name>
@@ -12,7 +12,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<elasticsearch.version>0.19.11</elasticsearch.version>
+		<elasticsearch.version>0.90.5</elasticsearch.version>
 	</properties>
 
 	<dependencies>
@@ -35,12 +35,6 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.16</version>
             <scope>compile</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.freemarker</groupId>
-            <artifactId>freemarker</artifactId>
-            <version>2.3.16</version>
         </dependency>
         
 	</dependencies>
